--- a/Accounts/templates/status.html
+++ b/Accounts/templates/status.html
@@ -40,3 +40,17 @@
         </div>
     </div>
 </div>
+
+<style>
+    #total-orders {
+    background-color: #4cb4c7;
+}
+
+#orders-delivered {
+    background: #7abecc;
+}
+
+#orders-pending {
+    background-color: #7cd1c0;
+}
+</style>
